--- a/src/style.css
+++ b/src/style.css
@@ -38,7 +38,7 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  padding: 0.4em 0.6em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
@@ -62,7 +62,11 @@ button:focus-visible {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
-  text-align: center;
+}
+
+input {
+  padding: 1rem;
+  font-size: 1rem;
 }
 
 @media (prefers-color-scheme: light) {
